--- a/style.css
+++ b/style.css
@@ -10,8 +10,26 @@ body {
   height: 100vh;
 }
 
-.display {
+.display, .mirror {
   font-size: 10vmax;
   font-family: 'Major Mono Display', monospace;
   text-align: center;
+  line-height: 1;
+}
+
+.display > .text {
+  color: var(--col);
+}
+
+.mirror > .text {
+  display: inline-block;
+  transform: scaleY(-1);
+  opacity: 0.7;
+  background: linear-gradient(180deg, #000000, var(--col));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  background-size: 100%;
 }
