--- a/style.css
+++ b/style.css
@@ -1,17 +1,29 @@
 body {
-  background: #000;
+  background: #06030f;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: hsl(258, 18%, 80%);
+  font-family: 'Open Sans';
 }
 
-.wrapper {
+.align-center {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+}
+
+.wrapper {
   height: 100vh;
   margin: 0 auto;
   max-width: 70vw;
+  flex-wrap: nowrap;
+}
+
+.input-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .letters {
@@ -19,6 +31,8 @@ body {
   font-family: 'Major Mono Display', monospace;
   text-align: center;
   line-height: 1;
+  white-space: nowrap;
+  text-transform: uppercase;
 }
 
 .letters.normal > .text {
@@ -43,15 +57,16 @@ body {
 input[name='words'], button[name='randomise'] {
   padding: 4px 8px;
   margin: 0;
-  font-size: 3vmin;
-  background-color: #444;
-  color: #eee;
+  font-size: 5vmin;
+  background-color: #383246;
+  color: hsl(258, 18%, 80%);
   border: none;
   outline: none;
   font-family: 'Open Sans', sans-serif;
 }
 
-button {
+button[name='randomise'] {
+  background-color: hsl(258, 17%, 40%);
   cursor: pointer;
   opacity: 1;
   pointer-events: initial;
@@ -59,7 +74,7 @@ button {
 }
 
 button:hover {
-  background-color: #eee;
+  background-color: hsl(258, 18%, 80%);
   color: #000;
   transition: all 0.25s ease;
 }
@@ -68,4 +83,12 @@ button:disabled {
   cursor: not-allowed;
   opacity: 0.7;
   pointer-events: none;
+}
+
+.m-t-10 {
+  margin-top: 10px;
+}
+
+.m-t-20 {
+  margin-top: 20px;
 }
