--- a/style.css
+++ b/style.css
@@ -1,9 +1,24 @@
 body {
-  background: #06030f;
+  --near-black: hsl(258, 67%, 4%);
+  /* background: var(--near-black); */
+  height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: hsl(258, 18%, 80%);
   font-family: 'Open Sans';
+  font-weight: bold;
+  font-size: max(1rem, 3vmin);
+  margin: 25px;
+  background: linear-gradient(0deg,
+    hsl(258, 17%, 20%) 10%,
+    var(--near-black) 50%
+  );
+}
+
+h3 {
+  margin: 0;
+  text-align: center;
+  font-size: max(1.125rem, 4vmin);
 }
 
 .align-center {
@@ -14,9 +29,9 @@ body {
 }
 
 .wrapper {
-  height: 100vh;
+  height: 65vh;
+  max-width: 70vmin;
   margin: 0 auto;
-  max-width: 70vw;
   flex-wrap: nowrap;
 }
 
@@ -27,7 +42,7 @@ body {
 }
 
 .letters {
-  font-size: 10vmin;
+  font-size: max(10vmin, 2rem);
   font-family: 'Major Mono Display', monospace;
   text-align: center;
   line-height: 1;
@@ -44,7 +59,7 @@ body {
   display: inline-block;
   transform: scaleY(-1);
   opacity: 0.7;
-  background: linear-gradient(180deg, #000000, var(--col));
+  background: linear-gradient(180deg, transparent, var(--col));
   background-clip: text;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -57,16 +72,17 @@ body {
 input[name='words'], button[name='randomise'] {
   padding: 4px 8px;
   margin: 0;
-  font-size: 5vmin;
-  background-color: #383246;
-  color: hsl(258, 18%, 80%);
+  font-size: max(1rem, 3vmin);
+  font-weight: bold;
+  background-color: hsl(258, 18%, 18%);
+  color: hsl(258, 18%, 85%);
   border: none;
   outline: none;
   font-family: 'Open Sans', sans-serif;
 }
 
 button[name='randomise'] {
-  background-color: hsl(258, 17%, 40%);
+  background-color: hsl(258, 17%, 35%);
   cursor: pointer;
   opacity: 1;
   pointer-events: initial;
@@ -74,7 +90,7 @@ button[name='randomise'] {
 }
 
 button:hover {
-  background-color: hsl(258, 18%, 80%);
+  background-color: hsl(258, 18%, 90%);
   color: #000;
   transition: all 0.25s ease;
 }
@@ -83,6 +99,10 @@ button:disabled {
   cursor: not-allowed;
   opacity: 0.7;
   pointer-events: none;
+}
+
+.m-t-5 {
+  margin-top: 5px;
 }
 
 .m-t-10 {
