--- a/form.css
+++ b/form.css
@@ -1,3 +1,7 @@
+/****************/
+/* Slider input */
+/****************/
+
 .sliders {
   flex-direction: column;
 }
@@ -41,4 +45,25 @@
   background: #b6afc7;
   border: 4px solid #000;
   cursor: pointer;
+}
+
+/***************/
+/* Placeholder */
+/***************/
+
+:root {
+  --placeholder-colour: hsl(257, 11%, 43%);
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: var(--placeholder-colour);
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: var(--placeholder-colour);
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: var(--placeholder-colour);
 }
