--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,7 @@ h3 {
   max-width: 70vmin;
   margin: 0 auto;
   flex-wrap: nowrap;
+  position: relative;
 }
 
 .input-wrapper {
@@ -129,4 +130,31 @@ button:disabled {
 
 .m-t-20 {
   margin-top: 20px;
+}
+
+footer {
+  font-weight: normal;
+  font-size: 1rem;
+  color: hsl(258, 18%, 80%);
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  min-width: 75vw;
+}
+
+footer > a {
+  color: hsl(258, 18%, 80%);
+  transition: all 0.2s ease;
+}
+
+footer > a:hover {
+  color: white;
+  transition: all 0.2s ease;
+}
+
+.new-tab-icon::after {
+  font-family: "Font Awesome 5 Free"; 
+  font-weight: 900; 
+  content: "\f35d";
+  margin-left: 5px;
 }
